--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title id="titleWeb"></title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/mystyle.css">
+    <link rel="stylesheet" href="mystyle.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 
